[gd_scene load_steps=5 format=3 uid="uid://dgcki1g7acu6l"]

[ext_resource type="Script" uid="uid://cwkmq1grdwyd8" path="res://Scripturi/main.gd" id="1_6jbav"]
[ext_resource type="PackedScene" uid="uid://dpmcycx2pfwqk" path="res://Scene/fall_item.tscn" id="2_v18wt"]

[sub_resource type="Gradient" id="Gradient_r4aha"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uuj8t"]
gradient = SubResource("Gradient_r4aha")

[node name="CanvasLayer" type="CanvasLayer" groups=["proba"]]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.069
anchor_top = 0.142
anchor_right = 0.069
anchor_bottom = 0.142
offset_left = -0.488007
offset_top = -22.016
offset_right = 146.512
offset_bottom = 21.984

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_6jbav")
FallingItemScene = ExtResource("2_v18wt")

[node name="SpawnTimer" type="Timer" parent="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.52549)
show_behind_parent = true
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.057
anchor_right = 0.968
anchor_bottom = 0.948
offset_left = 0.135998
offset_top = 0.0639992
offset_right = -0.136108
offset_bottom = -0.304077
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_uuj8t")

[node name="PenaltyLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.837
anchor_top = 0.127
anchor_right = 0.837
anchor_bottom = 0.127
offset_left = -0.223999
offset_top = -22.296
offset_right = 105.776
offset_bottom = 21.704
grow_horizontal = 0

[node name="exit" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.895
anchor_top = 0.835
anchor_right = 0.895
anchor_bottom = 0.835
offset_left = -47.04
offset_top = -28.08
offset_right = 47.96
offset_bottom = 27.92
grow_horizontal = 0
grow_vertical = 0
text = "EXIT"

[connection signal="pressed" from="exit" to="Node2D" method="_on_exit_pressed"]
